<resources>
    <string name="app_name">ElectronicsStoreApplication</string>
    <string name="find_all_your_electrical_needs">Find all your Electrical Needs…</string>
    <string name="sign_up">Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_login">User Login!</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="log_in">Log in</string>
    <string name="not_registered_sign_up_here">Not Registered? Sign up here!</string>
    <string name="register_user">Register User</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here!</string>
    <string name="Admin_login" />
    <string name="admin_login">Admin_login</string>
    <string name="enter_your_UserName" />
    <string name="enter_a_username">Enter a Username</string>
    <string name="btnAdmin">Login as Admin</string>
    <string name="Log_Out">Log_out</string>
    <string name="enter_your_usernmae">enter_username</string>
    <string name="enter_your_username">Enter Username</string>
    <string name="admin_Login">Admin Login</string>
    <string name="this_is_the_home_page">this is the home page</string>
    <string name="Not_admin_Login">Not Admin</string>
    <string name="Login">Log In</string>
    <string name="add_new_products">add new products</string>
    <string name="welcome_admin_please_add_new_products">Welcome Admin, Please add new Products</string>
    <string name="admin_logout">Admin Logout</string>
    <string name="add_new_phones">Add New Phones</string>
    <string name="add_new_laptops">Add New Laptops</string>
    <string name="add_new_gaming_items">Add New Gaming Items</string>
    <string name="add_new_fridges">Add New Fridges</string>
    <string name="add_new_blenders">Add New Blenders</string>
    <string name="add_new_tvs">Add New Tvs</string>
    <string name="add_product">Add Product</string>
    <string name="product_price">Product Price...</string>
    <string name="product_description">Product Description...</string>
    <string name="product_name">Product Name...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="browns_electronics">Browns Electronics</string>
    <string name="user_name">User Name</string>
    <string name="total_price">Total Price</string>
    <string name="your_final_order_is_placed">Your Final Order is Placed.</string>
    <string name="please_enter_your_shipping_details">Please Enter your Shipping Details</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="confirm">Confirm</string>

</resources>
