<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.electronicsstoreapplication.LoginActivity">

<LinearLayout
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/app_logo"
        android:src="@drawable/common_google_signin_btn_icon_dark"
        android:cropToPadding="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_login"
        android:id="@+id/textView"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:id="@+id/editTextLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:id="@+id/editTextLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_margin="15dp"
        android:id="@+id/buttonLogin"
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:background="@drawable/buttons"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAlignment="center"
        android:text="@string/not_registered_sign_up_here"
        android:textSize="22sp"
        android:id="@+id/textViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

</LinearLayout>

</RelativeLayout>
